...
                    .accessibility(identifier: "todoItem-\(Todo.name)")
                }
                .onDelete(perform: { indexSet in
                    dataStore.deleteItem(at: indexSet)
                })
            }
            .accessibility(identifier: "todoList")
            .listStyle(InsetGroupedListStyle())
            .toolbar {
                ToolbarItem(placement: .principal) {
                    Text("SUT Todo App")
                        .font(.largeTitle)
                        .foregroundColor(Color(.label))
...
                    HStack {
                        Button {
                            self.formType = .new
                        } label: {
                            Image(systemName: "plus.circle.fill")
                        }
                        .accessibility(identifier: "todoPlusButton")
                        Text("")
                    }
                }
            }
        }
        .sheet(item: $formType) { formType in
...
